Ver 2.4.0(15) : MD-196, MD-156, MD-232 fixed.

--- a/Modacity/Modacity/ViewController/Details/StatisticsView.xib
+++ b/Modacity/Modacity/ViewController/Details/StatisticsView.xib
@@ -111,7 +111,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="backgroundColor" red="0.25490196078431371" green="0.24313725490196078" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="bottom" secondItem="Qk3-2N-Wbr" secondAttribute="bottom" constant="20" id="6qj-nC-CGK"/>
                                                                 <constraint firstItem="2nh-Da-jBc" firstAttribute="leading" secondItem="GHG-gh-v3A" secondAttribute="leading" constant="20" id="8f8-Wu-Vwc"/>
@@ -144,7 +144,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="backgroundColor" red="0.25490196078431371" green="0.24313725490196078" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstItem="EuQ-I5-T8E" firstAttribute="leading" secondItem="rPf-GN-6Xn" secondAttribute="leading" constant="20" id="9yv-LC-foY"/>
                                                                 <constraint firstItem="Fbl-pd-Gr2" firstAttribute="leading" secondItem="m1l-5g-FO4" secondAttribute="leading" id="GtF-I3-Ekr"/>
@@ -177,7 +177,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="backgroundColor" red="0.25490196078431371" green="0.24313725490196078" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstItem="pUC-qL-ls7" firstAttribute="top" secondItem="N0G-B4-IvY" secondAttribute="top" constant="15" id="1Ic-AV-kbg"/>
                                                                 <constraint firstItem="dqw-ou-Jts" firstAttribute="leading" secondItem="pUC-qL-ls7" secondAttribute="leading" id="1nw-Tc-hh9"/>
@@ -210,7 +210,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="backgroundColor" red="0.25490196078431371" green="0.24313725490196078" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstItem="8ZB-Vz-brF" firstAttribute="top" secondItem="VeP-j5-VC4" secondAttribute="bottom" constant="5" id="8EM-di-aK6"/>
                                                                 <constraint firstItem="8ZB-Vz-brF" firstAttribute="leading" secondItem="fik-ad-77y" secondAttribute="leading" id="FQK-sH-kNL"/>
@@ -302,7 +302,7 @@
                                             <rect key="frame" x="10" y="10" width="436" height="116"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WEEKLY AVERAGE" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfo-zo-aG3">
-                                                    <rect key="frame" x="146.5" y="10" width="143.5" height="19.5"/>
+                                                    <rect key="frame" x="146.5" y="15" width="143.5" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -310,20 +310,20 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p5S-Or-FCI">
                                                     <rect key="frame" x="0.0" y="39.5" width="436" height="76.5"/>
                                                     <subviews>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OPD-Ey-uS5">
-                                                            <rect key="frame" x="0.0" y="0.0" width="218" height="76.5"/>
+                                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OPD-Ey-uS5">
+                                                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="76.5"/>
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dib-aX-vda">
-                                                                    <rect key="frame" x="74" y="0.0" width="70.5" height="43"/>
+                                                                    <rect key="frame" x="-35.5" y="0.0" width="71" height="43"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="64" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RbO-Hb-U7u">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="43.5" height="43"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="44" height="43"/>
                                                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="36"/>
                                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="min" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dy5-kT-QBg">
-                                                                            <rect key="frame" x="46.5" y="22" width="24" height="16"/>
+                                                                            <rect key="frame" x="47" y="22" width="24" height="16"/>
                                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <nil key="highlightedColor"/>
@@ -340,7 +340,7 @@
                                                                     </constraints>
                                                                 </view>
                                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PER PRACTICE" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VXp-jC-mem">
-                                                                    <rect key="frame" x="71.5" y="51" width="75.5" height="12"/>
+                                                                    <rect key="frame" x="-38" y="51" width="76" height="12"/>
                                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                                                     <color key="textColor" red="0.45098039215686275" green="0.42745098039215684" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -349,12 +349,13 @@
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstItem="Dib-aX-vda" firstAttribute="centerX" secondItem="OPD-Ey-uS5" secondAttribute="centerX" id="CC8-Q7-RNF"/>
+                                                                <constraint firstAttribute="width" id="VMi-3Q-PAL"/>
                                                                 <constraint firstItem="VXp-jC-mem" firstAttribute="centerX" secondItem="Dib-aX-vda" secondAttribute="centerX" id="Yjh-8v-dSv"/>
                                                                 <constraint firstItem="Dib-aX-vda" firstAttribute="top" secondItem="OPD-Ey-uS5" secondAttribute="top" id="daj-dG-lKR"/>
                                                                 <constraint firstItem="VXp-jC-mem" firstAttribute="top" secondItem="Dib-aX-vda" secondAttribute="bottom" constant="8" id="w5U-Py-w8n"/>
                                                             </constraints>
                                                         </view>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mjc-vY-hrA">
+                                                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mjc-vY-hrA">
                                                             <rect key="frame" x="218" y="5" width="0.5" height="50"/>
                                                             <color key="backgroundColor" red="0.45098039220000002" green="0.42745098040000001" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
@@ -363,10 +364,10 @@
                                                             </constraints>
                                                         </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zr7-ll-Eyf">
-                                                            <rect key="frame" x="218" y="0.0" width="218" height="76.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="436" height="76.5"/>
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="veK-dD-nfX">
-                                                                    <rect key="frame" x="79" y="0.0" width="60.5" height="43"/>
+                                                                    <rect key="frame" x="188" y="0.0" width="60.5" height="43"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="64" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jpa-JV-v9y">
                                                                             <rect key="frame" x="0.0" y="0.0" width="43.5" height="43"/>
@@ -392,7 +393,7 @@
                                                                     </constraints>
                                                                 </view>
                                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PER DAY" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MNa-NY-NOX">
-                                                                    <rect key="frame" x="87" y="51" width="44.5" height="12"/>
+                                                                    <rect key="frame" x="196" y="51" width="44.5" height="12"/>
                                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                                                     <color key="textColor" red="0.45098039220000002" green="0.42745098040000001" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -411,8 +412,7 @@
                                                     <constraints>
                                                         <constraint firstItem="Zr7-ll-Eyf" firstAttribute="top" secondItem="OPD-Ey-uS5" secondAttribute="top" id="3v0-4d-xMv"/>
                                                         <constraint firstItem="OPD-Ey-uS5" firstAttribute="top" secondItem="p5S-Or-FCI" secondAttribute="top" id="8MU-0D-Gnb"/>
-                                                        <constraint firstItem="Zr7-ll-Eyf" firstAttribute="width" secondItem="OPD-Ey-uS5" secondAttribute="width" id="Hgh-fk-GCZ"/>
-                                                        <constraint firstItem="OPD-Ey-uS5" firstAttribute="width" secondItem="p5S-Or-FCI" secondAttribute="width" multiplier="0.5" id="SZP-a1-qF8"/>
+                                                        <constraint firstItem="Zr7-ll-Eyf" firstAttribute="width" secondItem="p5S-Or-FCI" secondAttribute="width" id="OQl-ux-DfU"/>
                                                         <constraint firstItem="Zr7-ll-Eyf" firstAttribute="leading" secondItem="OPD-Ey-uS5" secondAttribute="trailing" id="Sbs-XD-xXN"/>
                                                         <constraint firstItem="Mjc-vY-hrA" firstAttribute="top" secondItem="OPD-Ey-uS5" secondAttribute="top" constant="5" id="UHx-hp-cQx"/>
                                                         <constraint firstItem="Mjc-vY-hrA" firstAttribute="centerX" secondItem="p5S-Or-FCI" secondAttribute="centerX" id="Xhf-YA-uB5"/>
@@ -422,12 +422,12 @@
                                                     </constraints>
                                                 </view>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" red="0.25490196078431371" green="0.24313725490196078" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="p5S-Or-FCI" secondAttribute="bottom" id="1rF-7E-hze"/>
-                                                <constraint firstItem="Qfo-zo-aG3" firstAttribute="top" secondItem="CeE-At-dXK" secondAttribute="top" constant="10" id="5QY-f1-xTy"/>
+                                                <constraint firstItem="Qfo-zo-aG3" firstAttribute="top" secondItem="CeE-At-dXK" secondAttribute="top" constant="15" id="5QY-f1-xTy"/>
                                                 <constraint firstItem="Qfo-zo-aG3" firstAttribute="centerX" secondItem="CeE-At-dXK" secondAttribute="centerX" id="kM1-Zf-oZM"/>
-                                                <constraint firstItem="p5S-Or-FCI" firstAttribute="top" secondItem="Qfo-zo-aG3" secondAttribute="bottom" constant="10" id="qUy-JA-tC7"/>
+                                                <constraint firstItem="p5S-Or-FCI" firstAttribute="top" secondItem="Qfo-zo-aG3" secondAttribute="bottom" constant="5" id="qUy-JA-tC7"/>
                                                 <constraint firstItem="p5S-Or-FCI" firstAttribute="leading" secondItem="CeE-At-dXK" secondAttribute="leading" id="vAL-gX-Qhi"/>
                                                 <constraint firstAttribute="trailing" secondItem="p5S-Or-FCI" secondAttribute="trailing" id="vlB-vK-790"/>
                                             </constraints>
