--- a/Modacity/Modacity/ViewController/Home/home.storyboard
+++ b/Modacity/Modacity/ViewController/Home/home.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -501,6 +501,12 @@ first playlist and start practicing.</string>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_menu" translatesAutoresizingMaskIntoConstraints="NO" id="PX3-w4-I1L">
                                 <rect key="frame" x="16" y="59" width="20" height="14"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Staging Version)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEJ-13-tbL">
+                                <rect key="frame" x="46.000000000000007" y="58.333333333333336" width="88.666666666666686" height="15.666666666666664"/>
+                                <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hcH-ca-via">
                                 <rect key="frame" x="0.0" y="44" width="60" height="60"/>
                                 <constraints>
@@ -519,6 +525,7 @@ first playlist and start practicing.</string>
                             <constraint firstItem="ujj-ed-1kn" firstAttribute="leading" secondItem="CFL-Ne-1EX" secondAttribute="leading" id="Gf0-ti-VS9"/>
                             <constraint firstItem="1iS-xe-Tzf" firstAttribute="trailing" secondItem="CFL-Ne-1EX" secondAttribute="trailing" id="Kb8-fw-nM7"/>
                             <constraint firstItem="3st-xD-Rdi" firstAttribute="leading" secondItem="CFL-Ne-1EX" secondAttribute="leading" id="MTv-wa-EQu"/>
+                            <constraint firstItem="FEJ-13-tbL" firstAttribute="leading" secondItem="PX3-w4-I1L" secondAttribute="trailing" constant="10" id="O03-gJ-Iv7"/>
                             <constraint firstItem="1iS-xe-Tzf" firstAttribute="top" secondItem="Fzh-78-Yft" secondAttribute="top" id="Odu-dj-1bx"/>
                             <constraint firstItem="ujj-ed-1kn" firstAttribute="top" secondItem="CFL-Ne-1EX" secondAttribute="top" id="VaH-i6-5NQ"/>
                             <constraint firstItem="ujj-ed-1kn" firstAttribute="trailing" secondItem="CFL-Ne-1EX" secondAttribute="trailing" id="ZyF-9Y-Cpc"/>
@@ -526,6 +533,7 @@ first playlist and start practicing.</string>
                             <constraint firstItem="3st-xD-Rdi" firstAttribute="top" secondItem="Fzh-78-Yft" secondAttribute="top" id="k1Z-IP-aMi"/>
                             <constraint firstItem="1iS-xe-Tzf" firstAttribute="bottom" secondItem="CFL-Ne-1EX" secondAttribute="bottom" constant="40" id="mDW-qS-QjA"/>
                             <constraint firstItem="1iS-xe-Tzf" firstAttribute="leading" secondItem="CFL-Ne-1EX" secondAttribute="leading" id="qHp-G2-gLd"/>
+                            <constraint firstItem="FEJ-13-tbL" firstAttribute="centerY" secondItem="PX3-w4-I1L" secondAttribute="centerY" id="rda-ax-fLV"/>
                             <constraint firstItem="ujj-ed-1kn" firstAttribute="bottom" secondItem="CFL-Ne-1EX" secondAttribute="bottom" id="sVg-en-Bkq"/>
                             <constraint firstItem="hcH-ca-via" firstAttribute="leading" secondItem="CFL-Ne-1EX" secondAttribute="leading" id="wcT-d9-XgM"/>
                             <constraint firstItem="PX3-w4-I1L" firstAttribute="top" secondItem="CFL-Ne-1EX" secondAttribute="top" constant="15" id="znz-J2-wNl"/>
@@ -543,6 +551,7 @@ first playlist and start practicing.</string>
                         <outlet property="labelFavoritesHeader" destination="da3-DE-qjr" id="lNn-qa-edr"/>
                         <outlet property="labelRecentHeader" destination="9qr-R3-BeI" id="4ei-Up-pvp"/>
                         <outlet property="labelTotalTimeCaption" destination="b5X-Yy-dRV" id="fAA-1y-amC"/>
+                        <outlet property="labelVersionChecking" destination="FEJ-13-tbL" id="QAV-ID-Km7"/>
                         <outlet property="labelWelcome" destination="wpx-86-n3d" id="X3k-yK-GDl"/>
                         <outlet property="textfieldDayStreak" destination="Vnz-GV-vcM" id="2Cn-kQ-qvu"/>
                         <outlet property="textfieldImprovements" destination="49d-EG-qn5" id="roM-AU-gE0"/>
